// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToString can render a scoped component within a shadow component 1`] = `"<car-list cars=\\"[{&quot;make&quot;:&quot;VW&quot;,&quot;model&quot;:&quot;Vento&quot;,&quot;year&quot;:2024},{&quot;make&quot;:&quot;VW&quot;,&quot;model&quot;:&quot;Beetle&quot;,&quot;year&quot;:2023}]\\" class=\\"sc-car-list-h\\" custom-hydrate-flag=\\"\\" s-id=\\"7\\"><template shadowrootmode=\\"open\\"><style>:host{display:block;margin:10px;padding:10px;border:1px solid blue}ul{display:block;margin:0;padding:0}li{list-style:none;margin:0;padding:20px}.selected{font-weight:bold;background:rgb(255, 255, 210)}</style></template><!--r.7--></car-list>"`;

exports[`renderToString can render a simple shadow component 1`] = `
"<another-car-detail class=\\"sc-another-car-detail-h\\" custom-hydrate-flag=\\"\\" s-id=\\"1\\">
  <template shadowrootmode=\\"open\\">
    <style>
      section{color:green}
    </style>
  </template>
  <!--r.1-->
</another-car-detail>"
`;

exports[`renderToString can render nested components 1`] = `
"<another-car-list cars=\\"[{&quot;make&quot;:&quot;VW&quot;,&quot;model&quot;:&quot;Vento&quot;,&quot;year&quot;:2024},{&quot;make&quot;:&quot;VW&quot;,&quot;model&quot;:&quot;Beetle&quot;,&quot;year&quot;:2023}]\\" class=\\"sc-another-car-list-h\\" custom-hydrate-flag=\\"\\" s-id=\\"6\\">
  <template shadowrootmode=\\"open\\">
    <style>
      :host{display:block;margin:10px;padding:10px;border:1px solid blue}ul{display:block;margin:0;padding:0}li{list-style:none;margin:0;padding:20px}.selected{font-weight:bold;background:rgb(255, 255, 210)}
    </style>
  </template>
  <!--r.6-->
</another-car-list>"
`;

exports[`renderToString renders server-side components with delegated focus 1`] = `"<cmp-dsd-focus class=\\"sc-cmp-dsd-focus-h\\" custom-hydrate-flag=\\"\\" s-id=\\"21\\"><template shadowrootmode=\\"open\\" shadowrootdelegatesfocus><div class=\\"sc-cmp-dsd-focus\\" c-id=\\"21.0.0.0\\"><!--t.21.1.1.0-->Clickable shadow DOM text</div><button class=\\"sc-cmp-dsd-focus\\" c-id=\\"21.2.0.1\\"><!--t.21.3.1.0-->Click me!</button></template><!--r.21--></cmp-dsd-focus>"`;

exports[`renderToString supports passing props to components 1`] = `
"<another-car-detail car=\\"{&quot;year&quot;:2024, &quot;make&quot;: &quot;VW&quot;, &quot;model&quot;: &quot;Vento&quot;}\\" class=\\"sc-another-car-detail-h\\" custom-hydrate-flag=\\"\\" s-id=\\"2\\">
  <template shadowrootmode=\\"open\\">
    <style>
      section{color:green}
    </style>
    <section c-id=\\"2.0.0.0\\" class=\\"sc-another-car-detail\\">
      <!--t.2.1.1.0-->
    </section>
  </template>
  <!--r.2-->
</another-car-detail>"
`;

exports[`renderToString supports passing props to components with a simple object 1`] = `
"<another-car-detail car=\\"{&quot;make&quot;:&quot;VW&quot;,&quot;model&quot;:&quot;Vento&quot;,&quot;year&quot;:2024}\\" class=\\"sc-another-car-detail-h\\" custom-hydrate-flag=\\"\\" s-id=\\"3\\">
  <template shadowrootmode=\\"open\\">
    <style>
      section{color:green}
    </style>
    <section c-id=\\"3.0.0.0\\" class=\\"sc-another-car-detail\\">
      <!--t.3.1.1.0-->
    </section>
  </template>
  <!--r.3-->
</another-car-detail>"
`;
